--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SERVER_PORT=5000
 
-CLIENT_URL='http://127.0.0.1:3000'
+CLIENT_URL='https://oleksandrose.github.io/react-chat/'
 
 POSTGRES_HOST=tuffi.db.elephantsql.com
 POSTGRES_DB=rjfdnhwa
